add plugin chess

--- a/src/view/html/about.html
+++ b/src/view/html/about.html
@@ -13,7 +13,7 @@
 			<div class="nav-center">
 				<ul class="clear">
 					<li><a href="{{.Host.Host}}/index">博客</a></li>
-					<li><a href="{{.Host.Host}}/high">High玩</a></li>
+					<li><a href="{{.Host.Host}}/play">High玩</a></li>
 					<li class="active"><a href="{{.Host.Host}}/about">关于自己</a></li>
 				</ul>
 			</div>
