--- a/src/view/html/about.html
+++ b/src/view/html/about.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>小风的个人博客 - 关于</title>
 	<link rel="stylesheet" href="/css/global.css" />
+	<link rel="shortcut icon" href="/img/facvicon.ico" />
 </head>
 <body>
 	<div class="body">
@@ -18,7 +19,22 @@
 				</ul>
 			</div>
 		</div>
-		<p style="font-size: 18px;margin: 0 auto;width: 100px;margin-top: 200px;">技术分享</p>
+		<div style="margin: 0 auto; width: 80%; margin-top: 80px;  background: #fff; border-width: 1px; padding: 20px 15px 30px 20px;">
+			<div style="margin-top: 30px;">
+				<img style="border-radius: 50%;margin: 0 auto; height: 80px; width: 80px; display: block; " src="http://tva3.sinaimg.cn/crop.0.0.180.180.180/a148c78cjw1e8qgp5bmzyj2050050aa8.jpg" alt="">
+			</div>
+			<p style="margin: 10px 0 15px 0; text-align: center; font-size: 16px;">小风</p>
+			<p style="padding-top: 30px; font-size: 19px; margin: 0 auto; width: 300px; text-align: center;">应当静如水</p>
+			<p style="padding-top: 15px; font-size: 19px; margin: 0 auto; width: 300px; text-align: center;">玩技术，爱分享，爱生活，爱老婆</p>
+			<div style="width: 300px; margin: 0 auto; margin-top: 80px; ">
+				<p style="text-align: center;">联系我: </p>
+				<p style="margin-top: 10px; text-align: center;">不常玩的微信: 风惜殇</p>
+				<div style="margin: 0 auto; width: 128px; margin-top: 20px;">
+					<img style="width: 128px; height: 128px;"; src="./img/wechat.png" alt=""/>
+				</div>
+				<p style="margin-top: 10px; text-align: center;">不常登的Email: <a href="mailto:sjjwind@live.com">sjjwind@live.com</a></p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
