--- a/src/view/html/blog.html
+++ b/src/view/html/blog.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Test Title</title>
+	<title>{{.BlogTitle}}</title>
 	<link rel="stylesheet" href="/css/talk.css">
 	<link rel="stylesheet" href="/css/global.css">
 	<link rel="stylesheet" href="/css/atom-article.css"> 
-	<link rel="stylesheet" href="/css/katex.min.css"> 
+	<link rel="stylesheet" href="/css/katex.min.css">
+	<link rel="shortcut icon" href="/img/facvicon.ico" />
 	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/jquery-cookie.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/blog.js?1003" type="text/javascript" charset="utf-8"></script>
