--- a/src/view/html/index.html
+++ b/src/view/html/index.html
@@ -7,7 +7,8 @@
 	<!-- <meta property="qc:admins" content="66062230477671641641656375" /> -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>小风的个人博客</title>
-	<link rel="stylesheet" href="/css/global.css" />
+	<link rel="stylesheet" href="/css/global.css"/>
+	<link rel="shortcut icon" href="/img/facvicon.ico" />
 </head>
 <body>
 	<div class="body">
@@ -33,7 +34,7 @@
 						</a>
 						<h2><a target="_blank" href="{{$.Host.Host}}/blog?id={{.BlogID}}" title="{{.BlogTitle}}">{{.BlogTitle}}</a></h2>
 					</header>
-					<div class="focus"><a target="_blank" href="{{$.Host.Host}}/blog?id={{.BlogID}}"><img class="thumb" src="{{$.Host.Host}}/cover?id={{.BlogUUID}}" height="123" width="200" alt="{{.BlogTitle}}"></a></div>
+					<div class="focus"><a target="_blank" href="{{$.Host.Host}}/blog?id={{.BlogID}}"><img class="thumb" src="{{$.Host.Host}}/cover?id={{.BlogUUID}}" height="123px" width="200px" alt="{{.BlogTitle}}"></a></div>
 						<span class="note"> {{.BlogDescription}}</span>
 					<p class="auth-span">
 							<span class="muted"><i class="fa fa-user"></i> <a href="{{$.Host.Host}}/about">{{.BlogAuthor}}</a></span>
