--- a/src/view/html/login-result.html
+++ b/src/view/html/login-result.html
@@ -8,7 +8,7 @@
 	{{else}}
 	<title>登录失败</title>
 	{{end}}
-	<link rel="stylesheet" href="">
+	<link rel="shortcut icon" href="/img/facvicon.ico" />
 </head>
 <body>
 	{{if .IsLoginSuccess}}
