--- a/src/view/html/404.html
+++ b/src/view/html/404.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>404</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="" />
+	<link rel="shortcut icon"href="/img/facvicon.ico" />
 </head>
 <body>
 	<p>404 Not Found</p>
