--- a/src/view/html/about.html
+++ b/src/view/html/about.html
@@ -19,7 +19,7 @@
 				</ul>
 			</div>
 		</div>
-		<div style="margin: 0 auto; width: 80%; margin-top: 80px;  background: #fff; border-width: 1px; padding: 20px 15px 30px 20px;">
+		<div style="margin: 0 auto; width: 80%; margin-top: 40px;  background: #fff; border-width: 1px; padding: 20px 15px 30px 20px;">
 			<div style="margin-top: 30px;">
 				<img style="border-radius: 50%;margin: 0 auto; height: 80px; width: 80px; display: block; " src="http://tva3.sinaimg.cn/crop.0.0.180.180.180/a148c78cjw1e8qgp5bmzyj2050050aa8.jpg" alt="">
 			</div>
@@ -34,6 +34,9 @@
 				</div>
 				<p style="margin-top: 10px; text-align: center;">不常登的Email: <a href="mailto:sjjwind@live.com">sjjwind@live.com</a></p>
 			</div>
+		</div>
+		<div class="bottom">
+			<p>Written by <a class="write" target="_blank" href="https://golang.org">Golang</a><a class="gov" target="_blank" href="http://www.miitbeian.gov.cn/">浙ICP备16031285号</a></p>
 		</div>
 	</div>
 </body>
