--- a/src/view/html/index.html
+++ b/src/view/html/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:wb="http://open.weibo.com/wb">
+<html>
 <head>
 	<meta charset="utf-8" />
+	<meta property="qc:admins" content="660637357164106375" />
 	<meta property="wb:webmaster" content="ec68cbf32bb1042d" />
-	<meta property="qc:admins" content="66062235164106375" />
-	<!-- <meta property="qc:admins" content="66062230477671641641656375" /> -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>小风的个人博客</title>
-	<link rel="stylesheet" href="/css/global.css"/>
-	<link rel="shortcut icon" href="/img/facvicon.ico" />
+	<link rel="stylesheet" href="{{.Host.Host}}/css/global.css"/>
+	<link rel="shortcut icon" href="{{.Host.Host}}/img/facvicon.ico" />
 </head>
 <body>
 	<div class="body">
@@ -75,6 +74,9 @@
 					</ul>
 				</div>
 			</div>
+		</div>
+		<div class="bottom">
+			<p>Written by <a class="write" target="_blank" href="https://golang.org">Golang</a><a class="gov" target="_blank" href="http://www.miitbeian.gov.cn/">浙ICP备16031285号</a></p>
 		</div>
 	</div>
 </body>
