--- a/src/view/html/play.html
+++ b/src/view/html/play.html
@@ -55,6 +55,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="bottom">
+			<p>Written by <a class="write" target="_blank" href="https://golang.org">Golang</a><a class="gov" target="_blank" href="http://www.miitbeian.gov.cn/">浙ICP备16031285号</a></p>
+		</div>
 	</div>
 </body>
 </html>
