add golang plugin

--- a/src/view/html/play.html
+++ b/src/view/html/play.html
@@ -42,7 +42,7 @@
 						<h2 class="list-title">{{.PluginName}}</h2>
 						<p class="visit-and-comment">0 人浏览      暂无评论</p>
 						<p class="discription">{{.PluginDescription}}</p>
-						<a href="{{$.Host.Host}}/{{.PluginURL}}">
+						<a href="{{$.Host.Host}}/plugin?id={{.PluginID}}">
 							<img class="list-cover" align="middle" src="{{$.Host.Host}}/big_cover?id={{.PluginID}}">
 						</a>
 						<p class="list-button">
