--- a/src/view/html/blog.html
+++ b/src/view/html/blog.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/css/atom-article.css"> 
 	<link rel="stylesheet" href="/css/katex.min.css">
 	<link rel="shortcut icon" href="/img/facvicon.ico" />
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="http://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 	<script src="{{.Host.Host}}/js/blog.js?1003" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
