--- a/src/view/html/plugin.html
+++ b/src/view/html/plugin.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/talk.css">
 	<link rel="stylesheet" href="/css/global.css" />
 	<link rel="shortcut icon" href="/img/facvicon.ico" />
-	<script src="http://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 	<script src="{{.Host.Host}}/js/plugin.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
