--- a/src/view/html/plugin.html
+++ b/src/view/html/plugin.html
@@ -9,16 +9,43 @@
 	<link rel="shortcut icon" href="/img/facvicon.ico" />
 	<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 	<script src="{{.Host.Host}}/js/plugin.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" charset="utf-8">
+		window.onload = function() {
+			$(".clear li").hover(function() {
+				$(this).addClass("nav-open");
+			}, function() {
+				$(this).removeClass("nav-open");
+			});
+		}
+	</script>
 </head>
 <body>
-	<div id="nav">
-		<img class="icon" src="{{.Host.Host}}/img/icon.png"/>
-		<div class="nav-center">
-			<ul class="clear">
-				<li><a href="{{.Host.Host}}/index">博客</a></li>
-				<li class="active"><a href="{{.Host.Host}}/play">High玩</a></li>
-				<li><a href="{{.Host.Host}}/about">关于自己</a></li>
-			</ul>
+	<div class="body">
+		<div id="nav">
+			<img class="icon" src="{{.Host.Host}}/img/icon.png"/>
+			<div class="nav-center">
+				<ul class="clear">
+					<li>
+						<a class="menu-name" href="{{.Host.Host}}/index">博客</a>
+						<div class="dropdown dropdown-navbar">
+							<ul class="ul-nav ul-nav-navbar">
+								<li><a class="menu-text" href="https://windyx.com/sort?type=Golang">Golang</a></li>
+								<li><a class="menu-text" href="https://windyx.com/sort?type=C%2b%2b">C++</a></li>
+								<li><a class="menu-text" href="https://windyx.com/sort?type=机器学习">机器学习</a></li>
+								<li><a class="menu-text" href="https://windyx.com/sort?type=Node">Node</a></li>
+								<li><a class="menu-text" href="https://windyx.com/sort?type=Android">Android</a></li>
+								<li><a class="menu-text" href="https://windyx.com/sort?type=其它">其它</a></li>
+							</ul>
+						</div>
+					</li>
+					<li  class="active">
+						<a class="menu-name" href="{{.Host.Host}}/play">High玩</a>
+					</li>
+					<li>
+						<a class="menu-name" href="{{.Host.Host}}/about">关于自己</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="container">
